--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "react-dom": "^18.2.0",
     "react-p5": "^1.3.33",
     "react-scripts": "5.0.1",
-    "sass": "^1.60.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.60.0"
   }
 }
